--- a/index.html
+++ b/index.html
@@ -663,11 +663,10 @@
     }
     
     body.dark-mode .form-section,
-    body.dark-mode .result-section,
-    body.dark-mode .harmonogram-container {
-        background-color: #404040; /* Dopasowane do tła harmonogramu w trybie ciemnym */
+    body.dark-mode .result-section {
+        background-color: #404040;
         border-radius: 10px;
-        padding: 20px; /* Zwiększamy padding, aby tło było większe i obejmowało wykres */
+        padding: 20px;
     }
 
     body.dark-mode .form-label,
