--- a/index.html
+++ b/index.html
@@ -356,6 +356,11 @@
         justify-content: center;
         align-items: center;
     }
+    /* Harmonogram – bez własnego tła */
+    .harmonogram {
+        padding: 0; /* Usuwamy padding, bo jest w wrapperze */
+        background-color: transparent; /* Reset tła */
+    }
     .harmonogram table {
         margin: 0 auto;
         width: auto;
@@ -367,10 +372,11 @@
         overflow: hidden;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
         background: #f9f9f9; /* Tło tabeli w trybie jasnym */
+        font-size: 0.8em; /* Przywrócenie oryginalnej wielkości czcionki */
     }
     
     .harmonogram th {
-        background: linear-gradient(90deg, #C2B280, #b0a070);
+        background: linear-gradient(90deg, #C2B280, #b0a070); /* Oryginalny kolor nagłówka w trybie jasnym */
         color: #000000;
         padding: 12px;
         text-align: center;
@@ -666,12 +672,13 @@
         color: #e0e0e0;
     }
 
+    /* Tryb ciemny */
     body.dark-mode .harmonogram table {
-        background: #404040;
+        background: #1f1f1f; /* Ciemniejsze tło tabeli w trybie ciemnym */
     }
-
+    
     body.dark-mode .harmonogram th {
-        ackground: linear-gradient(90deg, #8B7D47, #70673b);
+        background: linear-gradient(90deg, #8B7D47, #70673b); /* Oryginalny kolor nagłówka w trybie ciemnym */
         color: #e0e0e0;
         border-bottom: 2px solid #555;
     }
@@ -681,7 +688,7 @@
     }
 
     body.dark-mode .harmonogram td {
-        background: #404040; /* Tło komórek w trybie ciemnym */
+        background: #1f1f1f; /* Tło komórek w trybie ciemnym */
         color: #e0e0e0;
         border-bottom: 1px solid #555;
     }
@@ -1475,7 +1482,7 @@
                 labels: ['Kapitał', 'Odsetki', 'Podatek'],
                 datasets: [{
                     data: [kwota, odsetkiCalkowite, podatekCalkowity],
-                    backgroundColor: ['#A8D5BA', '#A3BFFA', '#F5A9B8'],
+                    backgroundColor: ['#28a745', '#007bff', '#dc3545'],
                     borderWidth: 1,
                     hoverOffset: 20
                 }]
