--- a/index.html
+++ b/index.html
@@ -574,16 +574,16 @@
         gap: 10px;
     }
     .variable-input-group .form-group {
-        max-width: 180px; /* Taki sam rozmiar jak w głównych polach */
+        max-width: 150px; /* Taki sam rozmiar jak w głównych polach */
         min-width: 0;
     }
     .variable-input-group .form-control,
     .variable-input-group .form-range {
-        height: 22px; /* Taki sam jak w głównych polach */
+        height: 22px;
         font-size: 0.7em;
         padding: 2px;
         text-align: center;
-        max-width: 180px;
+        max-width: 150px; /* Dodane dla spójności */
         background: none;
     }
     .remove-btn-wrapper {
