--- a/index.html
+++ b/index.html
@@ -574,8 +574,9 @@
         gap: 10px;
     }
     .variable-input-group .form-group {
-        max-width: 150px; /* Taki sam rozmiar jak w głównych polach */
+        max-width: 150px; /* Spójne z głównym formularzem */
         min-width: 0;
+        width: 150px; /* Dodajemy stałą szerokość dla pewności */
     }
     .variable-input-group .form-control,
     .variable-input-group .form-range {
@@ -583,8 +584,15 @@
         font-size: 0.7em;
         padding: 2px;
         text-align: center;
-        max-width: 150px; /* Dodane dla spójności */
-        background: none;
+        width: 100%; /* Zastępujemy max-width, aby wypełniały .form-group */
+        box-sizing: border-box; /* Upewniamy się, że padding nie zmienia szerokości */
+        background-color: #fff;
+    }
+
+    body.dark-mode .variable-input-group .form-control,
+    body.dark-mode .variable-input-group .form-range {
+        background-color: #fff; /* Białe tło w trybie ciemnym */
+        color: #333333; /* Ciemny tekst dla kontrastu */
     }
     .remove-btn-wrapper {
         display: flex;
