--- a/index.html
+++ b/index.html
@@ -563,9 +563,10 @@
         margin-top: 10px;
     }
     .variable-input-group {
+        .variable-input-group {
         display: flex;
         flex-direction: row; /* Poziomy układ dla całej grupy */
-        align-items: center;
+        align-items: flex-start; /* Wyrównanie do góry */
         margin-bottom: 10px;
         gap: 15px; /* Odstęp między elementami */
         justify-content: center; /* Wyśrodkowanie */
@@ -574,18 +575,17 @@
         display: flex;
         flex-direction: row; /* Pola "Od" i "Stopa Ref. NBP" obok siebie */
         gap: 20px; /* Odstęp między polami */
-        align-items: center;
+        align-items: flex-start;
     }
     .variable-input-group .form-group {
         display: flex;
-        flex-direction: row;
-        align-items: center;
-        max-width: none;
-        width: auto;
-        gap: 5px;
+        flex-direction: column; /* Etykieta nad polem */
+        align-items: center; /* Wyśrodkowanie w pionie */
+        max-width: 150px; /* Spójne z głównym formularzem */
+        width: 150px; /* Stała szerokość */
     }
-    .variable-input-group .form-control,
-    .variable-input-group .form-range {
+
+    .variable-input-group .form-control {
         height: 22px;
         font-size: 0.7em;
         padding: 2px;
@@ -594,8 +594,19 @@
         min-width: 0;
         box-sizing: border-box;
         background-color: #fff;
-        width: 100px; /* Stała szerokość pól */
+        width: 100%; /* Wypełnia .input-group */
     }
+        
+    .variable-input-group .form-control,
+    .variable-input-group .form-range {
+        height: 8px;
+        font-size: 0.7em;
+        margin-top: 2px; /* Odstęp od pola */
+        background: #d3d3d3;
+        border-radius: 5px;
+        width: 100%; /* Pełna szerokość .form-group */
+    }
+        
     .variable-input-group .input-group-text {
         font-size: 0.7em;
         padding: 2px 5px;
@@ -610,12 +621,12 @@
     .remove-btn-wrapper {
         display: flex;
         align-items: center; /* Przycisk "Usuń" w linii z polami */
-        margin-left: 10px; /* Odstęp od pól */
+        margin-left: 5px; /* Odstęp od pól */
     }
     .variable-input-group .form-label {
         font-size: 0.7em;
         text-transform: uppercase;
-        margin-bottom: 0;
+        margin-bottom: 2px;
         color: #333333;
         white-space: nowrap;
     }
@@ -627,7 +638,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        width: auto; /* Dopasowanie do zawartości */
+        width: 100%; /* Pełna szerokość .form-group */
         max-width: 150px; /* Maksymalna szerokość z jednostką */
     }
     .variable-input-group .btn-danger {
